Initial project setup: folder structure and basic files

--- a/index.html
+++ b/index.html
@@ -1,244 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Focus To-Do App</title>
-  <link rel="stylesheet" href="./src/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Focus To-Do</title>
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div id="app">
-    <!-- Left sidebar navigation -->
-    <nav class="sidebar" aria-label="Main sidebar navigation">
-      <header class="sidebar-header" tabindex="0">
-        <span class="logo" aria-label="Focus To-Do">Focus To-Do</span>
-      </header>
-      <ul class="sidebar-menu" role="menu">
-        <li role="menuitem" tabindex="0" aria-current="page">
-          <span>Today</span>
-          <span class="time-count">3h 45m</span>
-          <span class="task-count">6</span>
-        </li>
-        <li role="menuitem" tabindex="0">
-          <span>Tomorrow</span>
-          <span class="task-count">0</span>
-        </li>
-        <li role="menuitem" tabindex="0">
-          <span>This Week</span>
-          <span class="task-count">0</span>
-        </li>
-        <li role="menuitem" tabindex="0">
-          <span>High Priority</span>
-          <span class="task-count">1</span>
-        </li>
-        <li role="menuitem" tabindex="0">
-          <span>Planned</span>
-          <span class="time-count">3h 45m</span>
-          <span class="task-count">6</span>
-        </li>
-        <li role="menuitem" tabindex="0">
-          <span>All</span>
-          <span class="time-count">7h 5m</span>
-          <span class="task-count">8</span>
-        </li>
-        <li role="menuitem" tabindex="0">
-          <span>Completed</span>
-        </li>
-        <li role="menuitem" tabindex="0">
-          <span>Tasks</span>
-          <span class="task-count">0</span>
-        </li>
-      </ul>
-
-      <!-- Projects list -->
-      <ul class="projects-list">
-        <li tabindex="0">
-          <span class="project-dot work"></span>Work
-          <span class="time-count">2h 5m</span>
-          <span class="task-count">2</span>
-        </li>
-        <li tabindex="0">
-          <span class="project-dot study"></span>Study
-          <span class="time-count">1h 15m</span>
-          <span class="task-count">2</span>
-        </li>
-        <li tabindex="0">
-          <span class="project-dot personal"></span>Personal
-          <span class="time-count">25m</span>
-          <span class="task-count">2</span>
-        </li>
-        <li tabindex="0">
-          <span class="project-dot important"></span>Important
-          <span class="time-count">1h 15m</span>
-          <span class="task-count">1</span>
-        </li>
-        <li tabindex="0">
-          <span class="project-dot home"></span>Home
-          <span class="time-count">25m</span>
-          <span class="task-count">1</span>
-        </li>
-      </ul>
-
-      <footer class="sidebar-footer">
-        <button class="btn btn-primary" aria-label="Add Project">+ Add Project</button>
-      </footer>
-    </nav>
-
-    <!-- Main content area -->
-    <main class="main-content" tabindex="-1">
-      <!-- Header with page title -->
-      <div class="today-header">
-        <h1>Today</h1>
-      </div>
-
-      <!-- Statistics cards -->
-      <section class="stats" aria-label="Today stats">
-        <div class="stat-card">
-          <div class="stat-value">3.45</div>
-          <div class="stat-label">Estimated Time</div>
-        </div>
-        <div class="stat-card">
-          <div class="stat-value">6</div>
-          <div class="stat-label">Tasks to be Completed</div>
-        </div>
-        <div class="stat-card">
-          <div class="stat-value">50m</div>
-          <div class="stat-label">Elapsed Time</div>
-        </div>
-        <div class="stat-card">
-          <div class="stat-value">2</div>
-          <div class="stat-label">Completed Tasks</div>
-        </div>
-      </section>
-
-      <!-- Task input field -->
-      <div class="task-input-container">
-        <input type="text" class="task-input" placeholder='Add a task to "Tasks", press "Enter" to save' aria-label="Add a new task">
-      </div>
-
-      <!-- Task list organized by project -->
-      <section class="task-list" aria-label="Task List">
-        <!-- Work tasks -->
-        <div class="task-group">
-          <div class="task-group-header">
-            <div class="task-group-title">Work <span class="task-group-time">· 2h5m</span></div>
-          </div>
-          <ul>
-            <li tabindex="0">
-              <div class="task-checkbox" aria-label="Mark task as complete"></div>
-              <div class="task-content">
-                <span class="task-title">Organize last week's report</span>
-                <div class="task-priority"></div>
-              </div>
-              <span class="tag">#Important</span>
-              <span class="task-date">12 Sep 2019</span>
-            </li>
-            <li tabindex="0">
-              <div class="task-checkbox" aria-label="Mark task as complete"></div>
-              <div class="task-content">
-                <span class="task-title">Make a PPT of report of the forth season</span>
-                <div class="task-priority">
-                  <div class="priority-dot"></div>
-                  <div class="priority-dot"></div>
-                </div>
-              </div>
-              <span class="task-date">12 Sep 2019</span>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Study tasks -->
-        <div class="task-group">
-          <div class="task-group-header">
-            <div class="task-group-title">Study <span class="task-group-time">· 1h15m</span></div>
-          </div>
-          <ul>
-            <li tabindex="0">
-              <div class="task-checkbox" aria-label="Mark task as complete"></div>
-              <div class="task-content">
-                <span class="task-title">Reading</span>
-                <div class="task-priority">
-                  <div class="priority-dot"></div>
-                  <div class="priority-dot"></div>
-                </div>
-              </div>
-              <span class="task-date">12 Sep 2019</span>
-            </li>
-            <li tabindex="0">
-              <div class="task-checkbox checked" aria-label="Mark task as incomplete"></div>
-              <div class="task-content">
-                <span class="task-title">Write reading notes</span>
-                <div class="task-priority">
-                  <div class="priority-dot"></div>
-                </div>
-              </div>
-              <span class="tag">#Home</span>
-              <span class="task-date">12 Sep 2019</span>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Personal tasks -->
-        <div class="task-group">
-          <div class="task-group-header">
-            <div class="task-group-title">Personal <span class="task-group-time">· 25m</span></div>
-          </div>
-          <ul>
-            <li tabindex="0">
-              <div class="task-checkbox" aria-label="Mark task as complete"></div>
-              <div class="task-content">
-                <span class="task-title">Book a flight to Japan</span>
-              </div>
-              <span class="task-date">12 Sep 2019</span>
-            </li>
-            <li tabindex="0">
-              <div class="task-checkbox" aria-label="Mark task as complete"></div>
-              <div class="task-content">
-                <span class="task-title">Buy milk in the supermarket</span>
-              </div>
-              <span class="task-date">12 Sep 2019</span>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Add Task button -->
-        <button class="btn-add" aria-label="Add Task">Add Task</button>
-      </section>
-
-      <!-- Progress bar -->
-      <section class="progress-bar-container" aria-label="Progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-bar-inner" style="width: 40%"></div>
-        </div>
-      </section>
-      
-      <!-- Pomodoro timer (bottom overlay) -->
-      <section class="pomodoro-timer" aria-label="Pomodoro Timer">
-        <div class="timer-circle" role="timer" aria-live="polite" tabindex="0">
-          <span class="timer-time">25</span>
-        </div>
-      </section>
-    </main>
-
-    <!-- Modal (hidden by default) -->
-    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle" style="display:none;">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h2 id="modalTitle" class="modal-title">Edit Task</h2>
-          <button class="modal-close" aria-label="Close">&times;</button>
-        </div>
-        <form>
-          <div class="form-group">
-            <label for="taskName">Task Name</label>
-            <input id="taskName" name="taskName" type="text" class="form-control" required />
-          </div>
-          <div class="form-actions">
-            <button class="btn btn-primary" type="submit">Save</button>
-            <button class="btn btn-secondary" type="button">Cancel</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
+    <!-- Main app container will be added in the next step -->
+    <script src="src/js/main.js" type="module"></script>
 </body>
 </html>
