--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Focus To-Do</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="src/assets/icons/favicon.svg">
+    <link rel="icon" type="image/png" href="src/assets/icons/favicon.png">
+    <link rel="shortcut icon" href="src/assets/icons/favicon.ico">
+    <link rel="apple-touch-icon" href="src/assets/icons/favicon.png">
     <link rel="stylesheet" href="src/css/style.css">
     <!-- Font awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
